--- a/views/addpage.html
+++ b/views/addpage.html
@@ -16,9 +16,18 @@
       </div>
     </div>
     
-    <div>PLACEHOLDER FOR PAGE CONTENT TEXTAREA FIELD</div>
+    <div class="form-group">
+      <label for="content" class="col-sm-2 control-label">Page Content</label>
+      <textarea class="col-sm-10" name="content"> </textarea>
+    </div>
     
-    <div>PLACEHOLDER FOR PAGE STATUS INPUT FIELD</div>
+    <div class="form-group">
+      <label for="content" class="col-sm-2 control-label">Status</label>
+      <select name="status">
+      <option>open</option>
+      <option>close</option>
+      </select>
+    </div>
 
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
