complete show wiki single page & index pagae

--- a/views/addpage.html
+++ b/views/addpage.html
@@ -24,8 +24,8 @@
     <div class="form-group">
       <label for="content" class="col-sm-2 control-label">Status</label>
       <select name="status">
-      <option>open</option>
-      <option>close</option>
+      <option value="open">open</option>
+      <option value="close">close</option>
       </select>
     </div>
 
