--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -2,9 +2,17 @@
 
 {% block content %}
 
-  <h3>{{page.title}} <small> (<a href="PLACEHOLDER_URL_TITLE/similar">Similar</a>)</small></h3>
-  <h4>by <a href="PLACEHOLDER-AUTHOR-URL">PLACEHOLDER AUTHOR NAME</a></h4>
-  <div>PLACEHOLDER TAG LIST</div>
+  <h3>{{page.title}} <small> (<a href="{{ page.route }}/similar">Similar</a>)</small></h3>
+  <h4>by <a href="/user/{{ page.author.id }}">{{page.author.name}}</a></h4>
+  <div>
+    {% for tag in page.tags %}
+    <li>
+      <a href="/wiki/search/{{tag}}" >{{ tag }}</a>
+    </li>
+    {% endfor %}
+
+
+  </div>
   <hr/>
   <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
   <div class="page-body">{{page.content}}</div>
