maked part done

--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -15,7 +15,7 @@
   </div>
   <hr/>
   <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
-  <div class="page-body">{{page.content}}</div>
+  <div class="page-body">{% autoescape false %}{{ page.renderedContent }}{% endautoescape %}</div>
   <hr/>
   <a href="{{ page.route}}/edit" class="btn btn-primary">edit this page</a>
   <a href="{{ page.route}}/delete" class="btn btn-danger">delete this page</a>
